Thu Mar 30 2006 Paul Chitescu <paulc-devel@null.ro>
- Changed external module to allow to listen on sockets
- Added the watch concept designed by Maciek Kaminski
- Added many options that can be set per external module instance
- Updated the PHP libraries to support the new functions
- Changed the return values of GetEvent() to comply with typechecks in PHP5

Wed Mar 29 2006 Paul Chitescu <paulc-devel@null.ro>
- Modified conference based on Andrew McDonald's idea of N-way mixing
- Default output in rmanager is controlled by the config file
- Added option to some CallEndpoint methods to disable disconnect notifications

Thu Mar 23 2006 Paul Chitescu <paulc-devel@null.ro>
- More explicit configuration error messages, thanks to Carl Karsten

Wed Mar 22 2006 Paul Chitescu <paulc-devel@null.ro>
- Added RADIUS client module based on code sent by Faizan Naqvi (Tili)
- Applied various related and unrelated changes and fixes
- Fixed building on x86_64

Fri Feb 24 2006 Paul Chitescu <paulc-devel@null.ro>
- Added call quality analyzer module

Thu Feb 23 2006 Paul Chitescu <paulc-devel@null.ro>
- Fixed a minor bug in the SIP stack that caused excessive retransmissions
- More buggy SIP implementations are accepted (with warnings)

Tue Feb 21 2006 Paul Chitescu <paulc-devel@null.ro>
- Added SIP reINVITE forwarding in RTP and SDP forwarding modes

Fri Feb 17 2006 Paul Chitescu <paulc-devel@null.ro>
- Added per channel status information retrieval

Thu Feb 09 2006 Paul Chitescu <paulc-devel@null.ro>
- Workaround segfault in older libpthread - thread cancelled while taking mutex
- SDP can be forwarded as-is instead of the parsed version

Tue Jan 31 2006 Paul Chitescu <paulc-devel@null.ro>
- Fixed DirectSound playback buffer wrap-arounds

Mon Jan 23 2006 Paul Chitescu <paulc-devel@null.ro>
- Reorganized Module message IDs to make room for Route and Update

Thu Jan 19 2006 Paul Chitescu <paulc-devel@null.ro>
- Fixed several race and deadlock conditions