@@ -194,6 +194,12 @@ Package=<4>
     Begin Project Dependency
     Project_Dep_Name _dbpbx
     End Project Dependency
+    Begin Project Dependency
+    Project_Dep_Name _yradius
+    End Project Dependency
+    Begin Project Dependency
+    Project_Dep_Name _extmodule
+    End Project Dependency
 }}}
 
 ###############################################################################
@@ -577,6 +583,21 @@ Package=<4>
     End Project Dependency
     Begin Project Dependency
     Project_Dep_Name libypri
+    End Project Dependency
+}}}
+
+###############################################################################
+
+Project: "_yradius"=.\_yradius.dsp - Package Owner=<4>
+
+Package=<5>
+{{{
+}}}
+
+Package=<4>
+{{{
+    Begin Project Dependency
+    Project_Dep_Name Libyate
     End Project Dependency
 }}}
 
